# hidb

./: .env.example  .gitignore  DEVPATH.md  Dockerfile  HOW_TO_CHANGE_SCHEMA.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  reset-db.sh  setup.cfg  setup.py
docs/: DEVPATH.md  HOW_TO_CHANGE_SCHEMA.md  OBJECT_STORAGE_PLAN.md
hidb/: __init__.py  auth.py  db.py  filters.py  items.py  locations.py  models.py  places.py  rooms.py  run.py  schema.sql  search.py  settings.py  units.py
hidb/static/: code.js  manifest.json  style.css
hidb/templates/: _macros.html.j2  base.html  base.html.j2
hidb/templates/auth/: change_password.html.j2  create_user.html.j2  login.html.j2  register.html.j2  reset_password.html.j2  users.html.j2
hidb/templates/items/: _place_modal.html.j2  _unit_modal.html.j2  create.html  create.html.j2  details.html  details.html.j2  index.html  index.html.j2  update.html  update.html.j2
hidb/templates/locations/: create.html  create.html.j2  index.html  index.html.j2  update.html  update.html.j2
hidb/templates/places/: _form.html.j2  (+4 more)
migrations/versions/: 62c4921e4a16_initial_schema.py  7b4c2d9f1a6e_add_user_roles_and_account_state.py  a3f8c1d92b4e_add_place_is_private.py  b7e2f4a91c3d_add_user_preferences.py  c4a8e1f03b2d_item_photos_units.py  f8e91d2b4c60_initial_places_schema.py
tests/: conftest.py  test_auth.py  test_factory.py  test_home.py  test_item_photos.py  test_items.py  test_permissions.py  test_places_embed.py  test_preferences.py  test_search.py  test_units.py
(+10 files in other folders)
